# spektr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STYLE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py
docs/: api.md  architecture.md  guide.md
examples/: fastapi_app.py
src/spektr/: __init__.py  _bridge.py  _capture.py  _config.py  _context.py  _exceptions.py  _formatters.py  _logger.py  _middleware.py  _otel.py  _protocols.py  _repr.py  _tracer.py  _types.py
src/spektr/_core/: __init__.py  _capture.py  _logger.py  _tracer.py
src/spektr/_integrations/: __init__.py  _bridge.py  _exceptions.py  _health.py  _middleware.py
src/spektr/_metrics/: __init__.py  _api.py  _progress.py
src/spektr/_otel/: __init__.py  _metrics.py  _propagation.py  _tracing.py
src/spektr/_output/: __init__.py  _formatters.py  _redaction.py  _sinks.py
src/spektr/_sampling/: __init__.py  _ratelimit.py  _sampler.py
tests/: test_asgi_http.py  test_bridge.py  test_config.py  test_e2e.py  test_exceptions.py  test_formatters.py  test_health.py  test_integration.py  test_logging.py  test_metrics.py  test_middleware.py  test_otel.py  test_otel_export.py  test_otel_metrics.py  test_progress.py  test_propagation.py  test_protocols.py  test_public_api.py  test_ratelimit.py  test_redaction.py  test_repr.py  test_sampler_integration.py  test_sampling.py  test_sinks.py  test_sinks_integration.py  test_structured_exceptions.py  test_timing.py  test_trace_propagation.py  test_tracing.py
